--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Sinziana Cristea
 description: 'Pharmacometrician'
 url: 'https://s1nzy.github.io/'
-baseurl: '/s1nzy'
+baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
