--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Sinziana Cristea
-description: 'Pharmacometrician'
+description: 'PhD Candidate'
 url: 'https://s1nzy.github.io/'
 baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
